--- a/terms.html
+++ b/terms.html
@@ -43,9 +43,9 @@ Created by Jerred Shepherd (RiotShielder) -->
                         <ul class="nav navbar-nav">
                             <li><a href="index.html"><i class="fa fa-home"></i> Home</a>
                             </li>
-                            <li><a href="play.php"><i class="fa fa-gamepad"></i> Play</a>
+                            <li><a href="help.html"><i class="fa fa-gamepad"></i> Guide</a>
                             </li>
-                            <li><a href="forum"><i class="fa fa-comments-o"></i> Forum</a>
+                            <li><a href="forum"><i class="fa fa-comments-o"></i> Staff</a>
                             </li>
                             <li><a href="shop.html"><i class="fa fa-shopping-cart"></i> Shop</a>
                             </li>
