--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 Created by Jerred Shepherd (RiotShielder) -->
 
 <head>
-    <title>Home | Minecraft Server</title>
+    <title>Home | Patriam</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Minecraft Server">
+    <meta name="description" content="Patriam">
     <meta name="author" content="Jerred Shepherd">
     <link rel="shortcut icon" href="img/favicon.ico">
     
@@ -38,33 +38,24 @@ Created by Jerred Shepherd (RiotShielder) -->
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand accent" href="">Minecraft Server</a>
+                        <a class="navbar-brand accent" href="">Patriam</a>
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="index.html"><i class="fa fa-home"></i> Home</a>
                             </li>
-                            <li><a href="play.php"><i class="fa fa-gamepad"></i> Play</a>
+                            <li><a href="play.php"><i class="fa fa-bookmark-o"></i> Staff</a>
                             </li>
-                            <li><a href="forum"><i class="fa fa-comments-o"></i> Forum</a>
+                            <li><a href="help.html"><i class="fa fa-gamepad"></i> Guide</a>
                             </li>
                             <li><a href="shop.html"><i class="fa fa-shopping-cart"></i> Shop</a>
                             </li>
                             <li><a href="vote.html"><i class="fa fa-check-square-o"></i> Vote</a>
                             </li>
                         </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Account <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Login</a>
-                                    </li>
-                                    <li><a href="#">Register</a>
-                                    </li>
-                                </ul>
                             </li>
-                            <a href="play.php" class="btn btn-info navbar-btn navbar-right hidden-sm hidden-xs">IP:
-Server.com</a>
+                            <a href="" class="btn btn-info navbar-btn navbar-right hidden-sm hidden-xs">IP:
+Soon</a>
                         </ul>
                     </div>
                 </div>
