--- a/index.html
+++ b/index.html
@@ -68,11 +68,9 @@ Soon</a>
     <center>
         <div class="home-text">
             <div class="col-md-6 col-md-offset-3">
-                <h1 class="home-title">Minecraft Server</h1>
+                <h1 class="home-title">Patriam</h1>
 
-                <p class="home-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec massa ipsum, consectetur eget convallis ut, porttitor suscipit risus.</p>
-
-                <p><a class="btn btn-lg btn-primary" href="/play.html" role="button">Play Now &#187;</a>
+                <p class="home-desc">A Community Server dedicated to Minecraft and Discord. Join us on Discord or play on our Semi-Survival Minecraft Server. Minecraft including claiming, PvP, shops, End Resets, and more. Our Discord includes fun bots, chat channels, VCs, self roles, and more.</p>
                 </p>
             </div>
         </div>
@@ -87,24 +85,20 @@ Soon</a>
         <div class="row">
             <div class="col-lg-4">
                 <img class="img-circle img-border" src="img/marketing/1.jpg" height="150" width="150" alt="Marketing Image 1">
-                <h2>Heading 1</h2>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                <p><a class="btn btn-default" href="#" role="button">Details &raquo;</a>
+                <h2>Discord</h2>
+                <p>Our Discord Server is not just for Minecraft. With chat games, fun bots, Voice Chats, Other Game Talk, MEMES, anime and a lot more: we know you'll fit right in if Minecraft isn't your strong suit.
                 </p>
             </div>
             <div class="col-lg-4">
                 <img class="img-circle img-border"" src="img/marketing/2.jpg" height="150" width="150" alt="Marketing Image 2">
-                <h2>Heading 2</h2>
-                <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                <p><a class="btn btn-default" href="#" role="button">Details &raquo;</a>
+                <h2>Minecraft</h2>
+                <p>Our Minecraft server is Semi-Vanilla. This means we can include PvP, Claiming, Shops, Grief Inspection, End Resets, TPA, and much more. With a endless worldborder you will never run out of space to make your megabase!
                 </p>
             </div>
             <div class="col-lg-4">
                 <img class="img-circle img-border"" src="img/marketing/3.jpg" height="150" width="150" alt="Marketing Image 3">
-                <h2>Heading 3</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-                </p>
-                <p><a class="btn btn-default" href="#" role="button">Details &raquo;</a>
+                <h2>Our Host</h2>
+                <p>We are proudly powered by Xenyth Cloud. On 8GB RAM for our Survival server, 100GB Disk, and 10TB Bandwith. We assure there will be little to no lag as you experience our Minecraft server in the fullest potential.
                 </p>
             </div>
         </div>
@@ -122,14 +116,6 @@ Soon</a>
 
                     <li class="pull-right">
                         <a href="terms.html">Terms</a>
-                    </li>
-
-                    <li class="pull-right">
-                        <a href="staff.html">Staff</a>
-                    </li>
-                    
-                    <li class="pull-right">
-                        <a href="help.html">Help</a>
                     </li>
 
                 </ul>
