--- a/help.html
+++ b/help.html
@@ -7,15 +7,15 @@
 Created by Jerred Shepherd (RiotShielder) -->
 
 <head>
-    <title>Help | Minecraft Server</title>
+    <title>Home | Patriam</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Minecraft Server">
+    <meta name="description" content="Patriam">
     <meta name="author" content="Jerred Shepherd">
     <link rel="shortcut icon" href="img/favicon.ico">
-
+    
     <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,700" rel='stylesheet' type='text/css'>
 
