updated staff list

--- a/staff.html
+++ b/staff.html
@@ -73,12 +73,12 @@ Soon</a>
             <div class="col-md-2 text-center col-md-offset-4">
                 <img src="http://cravatar.eu/avatar/Azrian_/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>md_5<br><small>Owner</small></h3>
+                <h3>Azrian_<br><small>Owner</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/Notch/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="http://cravatar.eu/avatar/Omar_Szn/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Notch<br><small>Co-Owner</small></h3>
+                <h3>Omar_Szn<br><small>Owner</small></h3>
             </div>
 
         </div>
@@ -86,24 +86,24 @@ Soon</a>
         <div class="row">
 
             <div class="col-md-2 text-center col-md-offset-2">
-                <img src="http://cravatar.eu/avatar/jeb_/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="http://cravatar.eu/avatar/sukett/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Jeb<br><small>Head Admin</small></h3>
+                <h3>Lustifed<br><small>Manager</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/Dinnerbone/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Dinnerbone<br><small>Admin</small></h3>
+                <h3>Steve<br><small>Admin</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/C418/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>C418<br><small>Admin</small></h3>
+                <h3>Steve<br><small>Admin</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/EvilSeph/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>EvilSeph<br><small>Admin</small></h3>
+                <h3>Steve<br><small>Admin</small></h3>
             </div>
 
         </div>
@@ -111,24 +111,24 @@ Soon</a>
         <div class="row">
 
             <div class="col-md-2 text-center col-md-offset-1">
-                <img src="http://cravatar.eu/avatar/xlson/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>xlson<br><small>Head Mod</small></h3>
+                <h3>Steve<br><small>Head Mod</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/MinecraftChick/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>MinecraftChick<br><small>Mod</small></h3>
+                <h3>Steve<br><small>Mod</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/Grumm/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Grumm<br><small>Mod</small></h3>
+                <h3>Steve<br><small>Mod</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/Ticlin45/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Ticlin45<br><small>Mod</small></h3>
+                <h3>Steve<br><small>Mod</small></h3>
             </div>
             <div class="col-md-2 text-center">
                 <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
