who needs .html urls when you got clean ones

--- a/construction.html
+++ b/construction.html
@@ -42,14 +42,13 @@ Created by Jerred Shepherd (RiotShielder) -->
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="index.html"><i class="fa fa-home"></i> Home</a>
+                            <li class="active"><a href="/"><i class="fa fa-home"></i> Home</a>
                             </li>
-                            <li><a href="staff.html"><i class="fa fa-bookmark-o"></i> Staff</a>
+                            <li><a href="staff"><i class="fa fa-bookmark-o"></i> Staff</a>
                             </li>
-                            <li><a href="help.html"><i class="fa fa-gamepad"></i> Guide</a>
+                            <li><a href="help"><i class="fa fa-gamepad"></i> Guide</a>
                             </li>
-                            <li><a href="vote.html"><i class="fa fa-check-square-o"></i> Vote</a>
-                            </li>
+                            <li><a href="vote"><i class="fa fa-check-square-o"></i> Vote</a>
                         </ul>
                             </li>
                             <a class="btn btn-info navbar-btn navbar-right hidden-sm hidden-xs">IP:
