thank you snoot you broke my website

--- a/shop.html
+++ b/shop.html
@@ -44,11 +44,11 @@ Created by Jerred Shepherd (RiotShielder) -->
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/"><i class="fa fa-home"></i> Home</a>
                         </li>
-                        <li><a href="/staff"><i class="fa fa-bookmark-o"></i> Staff</a>
+                        <li><a href="staff.html"><i class="fa fa-bookmark-o"></i> Staff</a>
                         </li>
-                        <li><a href="/help"><i class="fa fa-gamepad"></i> Guide</a>
+                        <li><a href="help.html"><i class="fa fa-gamepad"></i> Guide</a>
                         </li>
-                        <li><a href="/vote"><i class="fa fa-check-square-o"></i> Vote</a>
+                        <li><a href="vote.html"><i class="fa fa-check-square-o"></i> Vote</a>
                         </li>
                     </ul>
                         </li>
