--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@ Created by Jerred Shepherd (RiotShielder) -->
                             <li><a href="help.html"><i class="fa fa-gamepad"></i> Guide</a>
                             </li>
                             <li><a href="vote.html"><i class="fa fa-check-square-o"></i> Vote</a>
+                            </li>
+                            <li><a href="shop.html"><i class="fa fa-shopping-cart"></i> Shop</a>
+
                         </ul>
                             </li>
                             <a class="btn btn-info navbar-btn navbar-right hidden-sm hidden-xs">IP:
