--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@ Created by Jerred Shepherd (RiotShielder) -->
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="/"><i class="fa fa-home"></i> Home</a>
                             </li>
-                            <li><a href="staff.html"><i class="fa fa-bookmark-o"></i> Staff</a>
+                            <li><a href="/staff"><i class="fa fa-bookmark-o"></i> Staff</a>
                             </li>
-                            <li><a href="help.html"><i class="fa fa-gamepad"></i> Guide</a>
+                            <li><a href="/help"><i class="fa fa-gamepad"></i> Guide</a>
                             </li>
-                            <li><a href="vote.html"><i class="fa fa-check-square-o"></i> Vote</a>
+                            <li><a href="/comingsoon"><i class="fa fa-check-square-o"></i> Vote</a>
                             </li>
-                            <li><a href="shop.html"><i class="fa fa-shopping-cart"></i> Shop</a>
+                            <li><a href="/comingsoon"><i class="fa fa-shopping-cart"></i> Shop</a>
 
                         </ul>
                             </li>
