--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Soon</a>
             <div class="col-md-6 col-md-offset-3">
                 <h1 class="home-title">Patriam</h1>
 
-                <p class="home-desc">A Community Server dedicated to Minecraft and Discord. Join us on Discord or play on our Semi-Survival Minecraft Server. Minecraft including claiming, PvP, shops, End Resets, and more. Our Discord includes fun bots, chat channels, VCs, self roles, and more.</p>
+                <p class="home-desc">A Community Server dedicated to Minecraft and Discord. Join us on Discord or play on our Semi-Survival Patriam. Minecraft including claiming, PvP, shops, End Resets, and more. Our Discord includes fun bots, chat channels, VCs, self roles, and more.</p>
                 </p>
             </div>
         </div>
@@ -94,13 +94,13 @@ Soon</a>
             <div class="col-lg-4">
                 <img class="img-circle img-border"" src="img/marketing/2.jpg" height="150" width="150" alt="Marketing Image 2">
                 <h2>Minecraft</h2>
-                <p>Our Minecraft server is Semi-Vanilla. This means we can include PvP, Claiming, Shops, Grief Inspection, End Resets, TPA, and much more. With a endless worldborder you will never run out of space to make your megabase!
+                <p>Our Patriam is Semi-Vanilla. This means we can include PvP, Claiming, Shops, Grief Inspection, End Resets, TPA, and much more. With a endless worldborder you will never run out of space to make your megabase!
                 </p>
             </div>
             <div class="col-lg-4">
                 <img class="img-circle img-border"" src="img/marketing/3.jpg" height="150" width="150" alt="Marketing Image 3">
                 <h2>Our Host</h2>
-                <p>We are proudly powered by Xenyth Cloud. On 8GB RAM for our Survival server, 100GB Disk, and 10TB Bandwith. We assure there will be little to no lag as you experience our Minecraft server in the fullest potential.
+                <p>We are proudly powered by Xenyth Cloud. On 8GB RAM for our Survival server, 100GB Disk, and 10TB Bandwith. We assure there will be little to no lag as you experience our Patriam in the fullest potential.
                 </p>
             </div>
         </div>
