--- a/404.html
+++ b/404.html
@@ -7,12 +7,12 @@
 Created by Jerred Shepherd (RiotShielder) -->
 
 <head>
-    <title>404 | Minecraft Server</title>
+    <title>404 | Patriam</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Minecraft Server">
+    <meta name="description" content="Patriam">
     <meta name="author" content="Jerred Shepherd">
     <link rel="shortcut icon" href="img/favicon.ico">
 
@@ -42,7 +42,7 @@ Created by Jerred Shepherd (RiotShielder) -->
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/"><i class="fa fa-home"></i> Home</a>
+                       <li class="active"><a href="/"><i class="fa fa-home"></i> Home</a>
                         </li>
                         <li><a href="/staff"><i class="fa fa-bookmark-o"></i> Staff</a>
                         </li>
@@ -72,27 +72,22 @@ Soon</a>
 
     <!-- Footer -->
 
-    <div class="container hidden-sm hidden-xs">
-        <hr>
-        <ul class='nav nav-pills'>
-            <li class='pull-left'><a href="http://shepherdjerred.com/">Design by Jerred Shepherd
-      </a>
-            </li>
+       <!-- Footer -->
+       <div id="footer">
+        <div class="container hidden-xs">
+            <hr>
+            <ul class='nav nav-pills'>
+                <li class='pull-left'><a href="http://shepherdjerred.com/">Design by Jerred Shepherd
+  </a>
+                </li>
 
-                    <li class="pull-right">
-                        <a href="terms.html">Terms</a>
-                    </li>
+                <li class="pull-right">
+                    <a href="terms.html">Terms</a>
+                </li>
 
-                    <li class="pull-right">
-                        <a href="staff.html">Staff</a>
-                    </li>
-                    
-                    <li class="pull-right">
-                        <a href="help.html">Help</a>
-                    </li>
-
-        </ul>
-        <br>
+            </ul>
+            <br>
+        </div>
     </div>
 <script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript">
 </script>
