--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -70,29 +70,22 @@ Soon</a>
         </div>
     </div>
 
-    <!-- Footer -->
+      <!-- Footer -->
+      <div id="footer">
+        <div class="container hidden-xs">
+            <hr>
+            <ul class='nav nav-pills'>
+                <li class='pull-left'><a href="http://shepherdjerred.com/">Design by Jerred Shepherd
+  </a>
+                </li>
 
-    <div class="container hidden-sm hidden-xs">
-        <hr>
-        <ul class='nav nav-pills'>
-            <li class='pull-left'><a href="http://shepherdjerred.com/">Design by Jerred Shepherd
-      </a>
-            </li>
+                <li class="pull-right">
+                    <a href="terms.html">Terms</a>
+                </li>
 
-                    <li class="pull-right">
-                        <a href="terms.html">Terms</a>
-                    </li>
-
-                    <li class="pull-right">
-                        <a href="staff.html">Staff</a>
-                    </li>
-                    
-                    <li class="pull-right">
-                        <a href="help.html">Help</a>
-                    </li>
-
-        </ul>
-        <br>
+            </ul>
+            <br>
+        </div>
     </div>
 <script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript">
 </script>
