--- a/terms/index.html
+++ b/terms/index.html
@@ -85,18 +85,18 @@ Soon</a>
 
             <ol type="a">
                 <li>
-                    Permission is granted to temporarily download one copy of the materials (information or software) on Minecraft Server's web site for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
+                    Permission is granted to temporarily download one copy of the materials (information or software) on Patriam's web site for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
 
                     <ol type="i">
                         <li>modify or copy the materials;</li>
                         <li>use the materials for any commercial purpose, or for any public display (commercial or non-commercial);</li>
-                        <li>attempt to decompile or reverse engineer any software contained on Minecraft Server's web site;</li>
+                        <li>attempt to decompile or reverse engineer any software contained on Patriam's web site;</li>
                         <li>remove any copyright or other proprietary notations from the materials; or</li>
-                        <li>transfer the materials to another person or "mirror" the materials on any otherMinecraft Server.</li>
+                        <li>transfer the materials to another person or "mirror" the materials on any otherPatriam.</li>
                     </ol>
                 </li>
                 <li>
-                    This license shall automatically terminate if you violate any of these restrictions and may be terminated by Minecraft Server at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.
+                    This license shall automatically terminate if you violate any of these restrictions and may be terminated by Patriam at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.
                 </li>
             </ol>
 
@@ -106,7 +106,7 @@ Soon</a>
 
             <ol type="a">
                 <li>
-                    The materials on Minecraft Server's web site are provided "as is". Minecraft Server makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, Minecraft Server does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its Internet web site or otherwise relating to such materials or on any sites linked to this site.
+                    The materials on Patriam's web site are provided "as is". Patriam makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, Patriam does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its Internet web site or otherwise relating to such materials or on any sites linked to this site.
                 </li>
             </ol>
 
@@ -115,7 +115,7 @@ Soon</a>
 </h3>
 
             <p>
-                In no event shall Minecraft Server or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption,) arising out of the use or inability to use the materials on Minecraft Server's Internet site, even if Minecraft Server or a Minecraft Server authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.
+                In no event shall Patriam or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption,) arising out of the use or inability to use the materials on Patriam's Internet site, even if Patriam or a Patriam authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.
             </p>
 
             <h3>
@@ -123,7 +123,7 @@ Soon</a>
 </h3>
 
             <p>
-                The materials appearing on Minecraft Server's web site could include technical, typographical, or photographic errors. Minecraft Server does not warrant that any of the materials on its web site are accurate, complete, or current. Minecraft Server may make changes to the materials contained on its web site at any time without notice. Minecraft Server does not, however, make any commitment to update the materials.
+                The materials appearing on Patriam's web site could include technical, typographical, or photographic errors. Patriam does not warrant that any of the materials on its web site are accurate, complete, or current. Patriam may make changes to the materials contained on its web site at any time without notice. Patriam does not, however, make any commitment to update the materials.
             </p>
 
             <h3>
@@ -131,7 +131,7 @@ Soon</a>
 </h3>
 
             <p>
-                Minecraft Server has not reviewed all of the sites linked to its Internet web site and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by Minecraft Server of the site. Use of any such linked web site is at the user's own risk.
+                Patriam has not reviewed all of the sites linked to its Internet web site and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by Patriam of the site. Use of any such linked web site is at the user's own risk.
             </p>
 
             <h3>
@@ -139,7 +139,7 @@ Soon</a>
 </h3>
 
             <p>
-                Minecraft Server may revise these terms of use for its web site at any time without notice. By using this web site you are agreeing to be bound by the then current version of these Terms and Conditions of Use.
+                Patriam may revise these terms of use for its web site at any time without notice. By using this web site you are agreeing to be bound by the then current version of these Terms and Conditions of Use.
             </p>
 
             <h3>
@@ -147,7 +147,7 @@ Soon</a>
 </h3>
 
             <p>
-                Any claim relating to Minecraft Server's web site shall be governed by the laws of the State of Texas without regard to its conflict of law provisions.
+                Any claim relating to Patriam's web site shall be governed by the laws of the State of Texas without regard to its conflict of law provisions.
             </p>
 
             <p>
@@ -197,27 +197,22 @@ Soon</a>
 
     <!-- Footer -->
 
-    <div class="container hidden-sm hidden-xs">
-        <hr>
-        <ul class='nav nav-pills'>
-            <li class='pull-left'><a href="http://shepherdjerred.com/">Design by Jerred Shepherd
-      </a>
-            </li>
+       <!-- Footer -->
+       <div id="footer">
+        <div class="container hidden-xs">
+            <hr>
+            <ul class='nav nav-pills'>
+                <li class='pull-left'><a href="http://shepherdjerred.com/">Design by Jerred Shepherd
+  </a>
+                </li>
 
-                    <li class="pull-right">
-                        <a href="terms.html">Terms</a>
-                    </li>
+                <li class="pull-right">
+                    <a href="terms.html">Terms</a>
+                </li>
 
-                    <li class="pull-right">
-                        <a href="staff.html">Staff</a>
-                    </li>
-                    
-                    <li class="pull-right">
-                        <a href="help.html">Help</a>
-                    </li>
-
-        </ul>
-        <br>
+            </ul>
+            <br>
+        </div>
     </div>
 <script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript">
 </script>
